backport: re PR tree-optimization/28900 (ICE verify_stmts failed (invalid operand to unary operator))

2006-09-18  Richard Guenther  <rguenther@suse.de>

        Backport from mainline:
	PR tree-optimization/28900
	* tree-if-conv.c (find_phi_replacement_condition): Gimplify
	compound conditional before creating COND_EXPR condition.

	* gcc.dg/torture/pr28900.c: New testcase

From-SVN: r117021